--- a/outils/bouliers/abaque_de_gerbert/index.html
+++ b/outils/bouliers/abaque_de_gerbert/index.html
@@ -253,16 +253,15 @@
         <div class="card-head">
           <h3>Addition</h3>
         </div>
-        <p>Mode guidé pour poser et effectuer des additions avec échanges.</p>
+        <p>Poser et effectuer des additions.</p>
       </a>
 
       <a href="abaque_gerbert_soustraction.html" class="card-link">
         <div class="icon-box">➖</div>
         <div class="card-head">
           <h3>Soustraction</h3>
-          <span class="pill soon">à venir</span>
         </div>
-        <p>Mode guidé pour poser et effectuer des soustractions (emprunts / échanges).</p>
+        <p>Poser et effectuer des soustractions.</p>
       </a>
 
 
