--- a/outils/bouliers/abaque_de_gerbert/index.html
+++ b/outils/bouliers/abaque_de_gerbert/index.html
@@ -284,7 +284,7 @@
       </a>
     </section>
 
-    <h2 class="section-title">🧩 Bonus <span class="badge soon">Optionnel</span></h2>
+    <h2 class="section-title">🧩 Bonus</h2>
     <section class="grid cat-adv">
       <a href="abaque_gerbert_aide.html" class="card-link">
         <div class="icon-box">📘</div>
@@ -294,9 +294,18 @@
         </div>
         <p>Une page simple “mode d’emploi” (règles, gestes, vocabulaire, conseils prof).</p>
       </a>
+
+      <a href="https://www.youtube.com/watch?v=_ubBAAgLiok" class="card-link" target="_blank" rel="noopener noreferrer">
+        <div class="icon-box">🎥</div>
+        <div class="card-head">
+          <h3>Origine, histoire, utilisation</h3>
+        </div>
+        <p>Vidéo YouTube.</p>
+      </a>
     </section>
 
-  </main>
+
+</main>
 
   <footer>
     <p>Outils pédagogiques — Abaque de Gerbert</p>
