--- a/outils/sheet_generator_schema_partie_tout.html
+++ b/outils/sheet_generator_schema_partie_tout.html
@@ -269,8 +269,8 @@
           <p>Choisir le format — à plastifier</p>
         </div>
         <div class="pills" aria-label="Choisir le format">
-          <a class="pill" href="./gabarits_enquêtes__1__A4.pdf" target="_blank" rel="noopener">A4</a>
-          <a class="pill" href="./gabarits_enquêtes__1__A3.pdf" target="_blank" rel="noopener">A3</a>
+          <a class="pill" href="./gabarits_enquetes__1__A4.pdf" target="_blank" rel="noopener">A4</a>
+          <a class="pill" href="./gabarits_enquetes__1__A3.pdf" target="_blank" rel="noopener">A3</a>
         </div>
       </div>
 
