--- a/outils/bouliers/abaque_de_gerbert/index.html
+++ b/outils/bouliers/abaque_de_gerbert/index.html
@@ -265,13 +265,12 @@
       </a>
 
 
-      <a href="abaque_gerbert_multiplication.html" class="card-link">
+      <a href="abaque_gerbert_multiplication_V1.html" class="card-link">
         <div class="icon-box">✖️</div>
         <div class="card-head">
           <h3>Multiplication</h3>
-          <span class="pill soon">à venir</span>
         </div>
-        <p>Mode guidé pour construire une multiplication (décomposition, échanges, regroupements).</p>
+        <p>Mode guidé pour construire une multiplication.</p>
       </a>
 
       <a href="abaque_gerbert_division.html" class="card-link">
