--- a/outils/bouliers/abaque_de_gerbert/index.html
+++ b/outils/bouliers/abaque_de_gerbert/index.html
@@ -268,7 +268,15 @@
       <a href="abaque_gerbert_multiplication_V1.html" class="card-link">
         <div class="icon-box">✖️</div>
         <div class="card-head">
-          <h3>Multiplication</h3>
+          <h3>Multiplication V1</h3>
+        </div>
+        <p>Mode guidé pour construire une multiplication.</p>
+      </a>
+
+      <a href="abaque_gerbert_multiplication_V2.html" class="card-link">
+        <div class="icon-box">✖️</div>
+        <div class="card-head">
+          <h3>Multiplication V2</h3>
         </div>
         <p>Mode guidé pour construire une multiplication.</p>
       </a>
