--- a/outils/sheet_generator_schema_partie_tout.html
+++ b/outils/sheet_generator_schema_partie_tout.html
@@ -1,10 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
+
 <html lang="fr">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>Schémas partie-tout</title>
-  <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width,initial-scale=1" name="viewport"/>
+<title>Schémas partie-tout</title>
+<style>
     :root{
       --bg:#f3f4f6;
       --ink:#111827;
@@ -115,32 +116,17 @@
       position:relative;
       overflow:hidden;
     }
-    .card::before{ display:none; }
+    .card::before{
+      content:"";
+      position:absolute; left:0; top:0; bottom:0;
+      width:6px;
+      background:linear-gradient(180deg, var(--blue), rgba(47,107,255,.35));
+      opacity:.9;
+    }
     .card:hover{transform:translateY(-2px); border-color:rgba(47,107,255,.28);}
     .card:active{transform:translateY(0px);}
 
-    
-    /* Choix format A4/A3 (pastilles) */
-    .card-picker{ cursor:pointer; }
-    .pills{
-      margin-left:auto;
-      display:flex;
-      gap:8px;
-      align-items:center;
-    }
-    .pill{
-      text-decoration:none;
-      font-weight:700;
-      font-size:12px;
-      padding:8px 10px;
-      border-radius:999px;
-      border:1px solid rgba(17,24,39,.14);
-      background:rgba(255,255,255,.65);
-      color:var(--ink);
-      box-shadow:0 8px 18px rgba(17,24,39,.08);
-    }
-    .pill:hover{ border-color:rgba(47,107,255,.35); }
-.icon{
+    .icon{
       width:46px; height:46px; border-radius:14px;
       display:grid; place-items:center;
       background:linear-gradient(135deg, var(--blueSoft), rgba(255,255,255,.0));
@@ -177,129 +163,137 @@
 .small .credit:hover{
   border-bottom-style: solid;
 }
+
+
+/* --- Ajustements (choix clean) --- */
+.card::before{ display:none; }
+
+/* Carte avec mini-boutons (PDF/TEX) */
+.card-picker{ cursor:pointer; }
+.pills{
+  margin-left:auto;
+  display:flex;
+  gap:8px;
+  align-items:center;
+}
+.pill{
+  text-decoration:none;
+  font-weight:800;
+  font-size:12px;
+  padding:8px 10px;
+  border-radius:999px;
+  border:1px solid rgba(17,24,39,.14);
+  background:rgba(255,255,255,.70);
+  color:var(--ink);
+  box-shadow: 0 8px 18px rgba(17,24,39,.08);
+  min-width:56px;       /* taille uniforme */
+  text-align:center;
+  line-height:1;
+}
+.pill:hover{ border-color:rgba(47,107,255,.35); }
 </style>
 </head>
 <body>
-  <div class="bg" aria-hidden="true">
-    <div class="splat s1"></div>
-    <div class="splat s2"></div>
-    <div class="splat s3"></div>
-    <div class="splat s4"></div>
-    <div class="splat s5"></div>
-    <div class="splat s6"></div>
-
-    <div class="bille b1"></div>
-    <div class="bille o b2"></div>
-    <div class="bille p b3"></div>
-    <div class="bille b4"></div>
-    <div class="bille p b5"></div>
-    <div class="bille o b6"></div>
-    <div class="bille b7"></div>
-    <div class="bille p b8"></div>
-    <div class="bille o b9"></div>
-    <div class="bille b10"></div>
-  </div>
-
-  <div class="wrap">
-    <header>
-      <div>
-        <h1>Schémas partie-tout</h1>
-        <p class="small">
-      Idée originale : <a class="credit" href="https://stevewyborney.com/" target="_blank" rel="noopener">SPLAT! par Steve Wyborney</a> — merci !
+<div aria-hidden="true" class="bg">
+<div class="splat s1"></div>
+<div class="splat s2"></div>
+<div class="splat s3"></div>
+<div class="splat s4"></div>
+<div class="splat s5"></div>
+<div class="splat s6"></div>
+<div class="bille b1"></div>
+<div class="bille o b2"></div>
+<div class="bille p b3"></div>
+<div class="bille b4"></div>
+<div class="bille p b5"></div>
+<div class="bille o b6"></div>
+<div class="bille b7"></div>
+<div class="bille p b8"></div>
+<div class="bille o b9"></div>
+<div class="bille b10"></div>
+</div>
+<div class="wrap">
+<header>
+<div>
+<h1>Schémas partie-tout</h1>
+<p class="small">
+      Idée originale : <a class="credit" href="https://stevewyborney.com/" rel="noopener" target="_blank">SPLAT! par Steve Wyborney</a> — merci !
 </p>
-      </div>
-      <a class="home" href="./index.html" title="Outils"><svg viewBox="0 0 24 24" aria-hidden="true" style="width:22px;height:22px;display:block">
-  <path d="M12 3.2 3 10.6v9.2c0 .9.7 1.6 1.6 1.6H9v-6.4h6v6.4h4.4c.9 0 1.6-.7 1.6-1.6v-9.2L12 3.2Z" fill="currentColor"/>
+</div>
+<a class="home" href="./index.html" title="Outils"><svg aria-hidden="true" style="width:22px;height:22px;display:block" viewbox="0 0 24 24">
+<path d="M12 3.2 3 10.6v9.2c0 .9.7 1.6 1.6 1.6H9v-6.4h6v6.4h4.4c.9 0 1.6-.7 1.6-1.6v-9.2L12 3.2Z" fill="currentColor"></path>
 </svg></a>
-    </header>
+</header>
+<main class="grid">
+<a class="card" href="./splat_tache_barre.html">
+<div aria-hidden="true" class="icon">
+<svg aria-hidden="true" viewbox="-2 -2 28 28">
+<path d="M 21.450 12.000 C 21.979 12.493, 22.733 13.157, 22.922 13.730 C 23.111 14.303, 22.888 14.955, 22.585 15.439 C 22.282 15.924, 21.594 16.286, 21.104 16.639 C 20.614 16.991, 20.139 17.305, 19.645 17.555 C 19.151 17.805, 18.652 18.017, 18.139 18.139 C 17.626 18.261, 16.997 18.145, 16.567 18.286 C 16.137 18.427, 15.835 18.537, 15.560 18.987 C 15.286 19.438, 15.225 20.332, 14.920 20.987 C 14.615 21.643, 14.217 22.565, 13.730 22.922 C 13.243 23.279, 12.555 23.268, 12.000 23.130 C 11.445 22.992, 10.888 22.449, 10.402 22.092 C 9.915 21.735, 9.470 21.380, 9.080 20.987 C 8.689 20.595, 8.333 20.186, 8.058 19.736 C 7.784 19.286, 7.700 18.651, 7.433 18.286 C 7.166 17.921, 6.968 17.667, 6.455 17.545 C 5.942 17.423, 5.073 17.642, 4.355 17.555 C 3.637 17.467, 2.637 17.373, 2.147 17.020 C 1.657 16.668, 1.455 16.010, 1.415 15.439 C 1.375 14.869, 1.719 14.172, 1.908 13.598 C 2.097 13.025, 2.297 12.493, 2.550 12.000 C 2.803 11.507, 3.081 11.042, 3.425 10.642 C 3.768 10.242, 4.346 9.966, 4.610 9.599 C 4.875 9.232, 5.055 8.965, 5.013 8.440 C 4.970 7.914, 4.493 7.155, 4.355 6.445 C 4.216 5.736, 3.997 4.756, 4.181 4.181 C 4.365 3.606, 4.928 3.210, 5.458 2.996 C 5.988 2.781, 6.758 2.893, 7.361 2.896 C 7.965 2.899, 8.533 2.924, 9.080 3.013 C 9.627 3.101, 10.155 3.222, 10.642 3.425 C 11.129 3.628, 11.569 4.092, 12.000 4.230 C 12.431 4.368, 12.740 4.457, 13.227 4.254 C 13.713 4.052, 14.288 3.364, 14.920 3.013 C 15.552 2.661, 16.417 2.150, 17.020 2.147 C 17.624 2.144, 18.175 2.558, 18.542 2.996 C 18.910 3.434, 19.041 4.200, 19.225 4.775 C 19.409 5.350, 19.560 5.898, 19.645 6.445 C 19.730 6.993, 19.778 7.533, 19.736 8.058 C 19.693 8.584, 19.388 9.146, 19.390 9.599 C 19.391 10.051, 19.402 10.373, 19.746 10.773 C 20.089 11.173, 20.921 11.507, 21.450 12.000 Z" fill="#2f6bff" opacity=".95"></path>
+</svg>
+</div>
+<div class="txt">
+<h2>SPLAT!</h2>
+<p>Primaire<br/>Générateur + schéma</p>
+</div>
+</a>
+<a class="card" href="./splat.html">
+<div aria-hidden="true" class="icon icon-splat-black">
+<svg aria-hidden="true" viewbox="-2 -2 28 28">
+<path d="M 21.450 12.000 C 21.979 12.493, 22.733 13.157, 22.922 13.730 C 23.111 14.303, 22.888 14.955, 22.585 15.439 C 22.282 15.924, 21.594 16.286, 21.104 16.639 C 20.614 16.991, 20.139 17.305, 19.645 17.555 C 19.151 17.805, 18.652 18.017, 18.139 18.139 C 17.626 18.261, 16.997 18.145, 16.567 18.286 C 16.137 18.427, 15.835 18.537, 15.560 18.987 C 15.286 19.438, 15.225 20.332, 14.920 20.987 C 14.615 21.643, 14.217 22.565, 13.730 22.922 C 13.243 23.279, 12.555 23.268, 12.000 23.130 C 11.445 22.992, 10.888 22.449, 10.402 22.092 C 9.915 21.735, 9.470 21.380, 9.080 20.987 C 8.689 20.595, 8.333 20.186, 8.058 19.736 C 7.784 19.286, 7.700 18.651, 7.433 18.286 C 7.166 17.921, 6.968 17.667, 6.455 17.545 C 5.942 17.423, 5.073 17.642, 4.355 17.555 C 3.637 17.467, 2.637 17.373, 2.147 17.020 C 1.657 16.668, 1.455 16.010, 1.415 15.439 C 1.375 14.869, 1.719 14.172, 1.908 13.598 C 2.097 13.025, 2.297 12.493, 2.550 12.000 C 2.803 11.507, 3.081 11.042, 3.425 10.642 C 3.768 10.242, 4.346 9.966, 4.610 9.599 C 4.875 9.232, 5.055 8.965, 5.013 8.440 C 4.970 7.914, 4.493 7.155, 4.355 6.445 C 4.216 5.736, 3.997 4.756, 4.181 4.181 C 4.365 3.606, 4.928 3.210, 5.458 2.996 C 5.988 2.781, 6.758 2.893, 7.361 2.896 C 7.965 2.899, 8.533 2.924, 9.080 3.013 C 9.627 3.101, 10.155 3.222, 10.642 3.425 C 11.129 3.628, 11.569 4.092, 12.000 4.230 C 12.431 4.368, 12.740 4.457, 13.227 4.254 C 13.713 4.052, 14.288 3.364, 14.920 3.013 C 15.552 2.661, 16.417 2.150, 17.020 2.147 C 17.624 2.144, 18.175 2.558, 18.542 2.996 C 18.910 3.434, 19.041 4.200, 19.225 4.775 C 19.409 5.350, 19.560 5.898, 19.645 6.445 C 19.730 6.993, 19.778 7.533, 19.736 8.058 C 19.693 8.584, 19.388 9.146, 19.390 9.599 C 19.391 10.051, 19.402 10.373, 19.746 10.773 C 20.089 11.173, 20.921 11.507, 21.450 12.000 Z" fill="#000000" opacity=".95"></path>
+</svg>
+</div>
+<div class="txt">
+<h2>SPLAT!</h2>
+<p>Primaire / collège<br/>Diaporama + générateur</p>
+</div>
+</a>
+<a class="card" href="./box_barre_final.html">
+<div aria-hidden="true" class="icon">
+<svg aria-hidden="true" viewbox="0 0 24 24"><path d="M4 7a3 3 0 0 1 3-3h10a3 3 0 0 1 3 3v10a3 3 0 0 1-3 3H7a3 3 0 0 1-3-3V7Zm3 2h10v2H7V9Zm0 4h10v2H7v-2Z"></path></svg>
+</div>
+<div class="txt">
+<h2>BOX</h2>
+<p>Générateur<br/>Schémas en barre</p>
+</div>
+</a>
+<a class="card" href="./box_pasbarre_final.html">
+<div aria-hidden="true" class="icon">
+<svg aria-hidden="true" viewbox="0 0 24 24"><path d="M5 6a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6Zm2 3h10v2H7V9Zm0 4h10v2H7v-2Z"></path></svg>
+</div>
+<div class="txt">
+<h2>BOX</h2>
+<p>Générateur</p>
+</div>
+</a>
+<div class="card card-picker" data-default="./gabarits_enquete_1.pdf" role="link" tabindex="0"><div aria-hidden="true" class="icon">
+<svg aria-hidden="true" viewbox="0 0 24 24"><path d="M7 3h7l3 3v15a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2Zm7 1v3h3M8 11h8v2H8v-2Zm0 4h8v2H8v-2Z"></path></svg>
+</div><div class="txt">
+<h2>Enquêtes — gabarits</h2>
+<p>À imprimer (A3 ou A4) puis plastifier</p>
+</div><div aria-label="Téléchargements" class="pills"><a class="pill" href="./gabarits_enquete_1.pdf" rel="noopener" target="_blank">PDF</a><a class="pill" download="" href="./gabarits_enquete_1.tex" rel="noopener">TEX</a></div></div>
+<a class="card" href="./detective_des_grandeurs__1.pdf" rel="noopener" target="_blank">
+<div aria-hidden="true" class="icon">
+<svg aria-hidden="true" viewbox="0 0 24 24"><path d="M7 3h7l3 3v15a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2Zm7 1v3h3M8 11h8v2H8v-2Zm0 4h8v2H8v-2Z"></path></svg>
+</div>
+<div class="txt">
+<h2>Enquêtes — Détective des grandeurs</h2>
+<p>Énoncé — type 1</p>
+</div>
+</a>
+</main>
+</div>
+<script>
+document.querySelectorAll('.card-picker').forEach(card=>{
+  const openDefault = () => window.open(card.dataset.default, '_blank', 'noopener');
 
-    <main class="grid">
-      <a class="card" href="./splat_tache_barre.html">
-        <div class="icon" aria-hidden="true">
-          <svg viewBox="-2 -2 28 28" aria-hidden="true">
-      <path d="M 21.450 12.000 C 21.979 12.493, 22.733 13.157, 22.922 13.730 C 23.111 14.303, 22.888 14.955, 22.585 15.439 C 22.282 15.924, 21.594 16.286, 21.104 16.639 C 20.614 16.991, 20.139 17.305, 19.645 17.555 C 19.151 17.805, 18.652 18.017, 18.139 18.139 C 17.626 18.261, 16.997 18.145, 16.567 18.286 C 16.137 18.427, 15.835 18.537, 15.560 18.987 C 15.286 19.438, 15.225 20.332, 14.920 20.987 C 14.615 21.643, 14.217 22.565, 13.730 22.922 C 13.243 23.279, 12.555 23.268, 12.000 23.130 C 11.445 22.992, 10.888 22.449, 10.402 22.092 C 9.915 21.735, 9.470 21.380, 9.080 20.987 C 8.689 20.595, 8.333 20.186, 8.058 19.736 C 7.784 19.286, 7.700 18.651, 7.433 18.286 C 7.166 17.921, 6.968 17.667, 6.455 17.545 C 5.942 17.423, 5.073 17.642, 4.355 17.555 C 3.637 17.467, 2.637 17.373, 2.147 17.020 C 1.657 16.668, 1.455 16.010, 1.415 15.439 C 1.375 14.869, 1.719 14.172, 1.908 13.598 C 2.097 13.025, 2.297 12.493, 2.550 12.000 C 2.803 11.507, 3.081 11.042, 3.425 10.642 C 3.768 10.242, 4.346 9.966, 4.610 9.599 C 4.875 9.232, 5.055 8.965, 5.013 8.440 C 4.970 7.914, 4.493 7.155, 4.355 6.445 C 4.216 5.736, 3.997 4.756, 4.181 4.181 C 4.365 3.606, 4.928 3.210, 5.458 2.996 C 5.988 2.781, 6.758 2.893, 7.361 2.896 C 7.965 2.899, 8.533 2.924, 9.080 3.013 C 9.627 3.101, 10.155 3.222, 10.642 3.425 C 11.129 3.628, 11.569 4.092, 12.000 4.230 C 12.431 4.368, 12.740 4.457, 13.227 4.254 C 13.713 4.052, 14.288 3.364, 14.920 3.013 C 15.552 2.661, 16.417 2.150, 17.020 2.147 C 17.624 2.144, 18.175 2.558, 18.542 2.996 C 18.910 3.434, 19.041 4.200, 19.225 4.775 C 19.409 5.350, 19.560 5.898, 19.645 6.445 C 19.730 6.993, 19.778 7.533, 19.736 8.058 C 19.693 8.584, 19.388 9.146, 19.390 9.599 C 19.391 10.051, 19.402 10.373, 19.746 10.773 C 20.089 11.173, 20.921 11.507, 21.450 12.000 Z"
-            fill="#2f6bff" opacity=".95"/>
-    </svg>
-        </div>
-        <div class="txt">
-          <h2>SPLAT!</h2>
-          <p>Primaire<br/>Générateur + schéma</p>
-        </div>
-      </a>
+  card.addEventListener('click', (e)=>{
+    if(e.target.closest('.pill')) return;
+    openDefault();
+  });
 
-      <a class="card" href="./splat.html">
-        <div class="icon icon-splat-black" aria-hidden="true">
-          <svg viewBox="-2 -2 28 28" aria-hidden="true">
-      <path d="M 21.450 12.000 C 21.979 12.493, 22.733 13.157, 22.922 13.730 C 23.111 14.303, 22.888 14.955, 22.585 15.439 C 22.282 15.924, 21.594 16.286, 21.104 16.639 C 20.614 16.991, 20.139 17.305, 19.645 17.555 C 19.151 17.805, 18.652 18.017, 18.139 18.139 C 17.626 18.261, 16.997 18.145, 16.567 18.286 C 16.137 18.427, 15.835 18.537, 15.560 18.987 C 15.286 19.438, 15.225 20.332, 14.920 20.987 C 14.615 21.643, 14.217 22.565, 13.730 22.922 C 13.243 23.279, 12.555 23.268, 12.000 23.130 C 11.445 22.992, 10.888 22.449, 10.402 22.092 C 9.915 21.735, 9.470 21.380, 9.080 20.987 C 8.689 20.595, 8.333 20.186, 8.058 19.736 C 7.784 19.286, 7.700 18.651, 7.433 18.286 C 7.166 17.921, 6.968 17.667, 6.455 17.545 C 5.942 17.423, 5.073 17.642, 4.355 17.555 C 3.637 17.467, 2.637 17.373, 2.147 17.020 C 1.657 16.668, 1.455 16.010, 1.415 15.439 C 1.375 14.869, 1.719 14.172, 1.908 13.598 C 2.097 13.025, 2.297 12.493, 2.550 12.000 C 2.803 11.507, 3.081 11.042, 3.425 10.642 C 3.768 10.242, 4.346 9.966, 4.610 9.599 C 4.875 9.232, 5.055 8.965, 5.013 8.440 C 4.970 7.914, 4.493 7.155, 4.355 6.445 C 4.216 5.736, 3.997 4.756, 4.181 4.181 C 4.365 3.606, 4.928 3.210, 5.458 2.996 C 5.988 2.781, 6.758 2.893, 7.361 2.896 C 7.965 2.899, 8.533 2.924, 9.080 3.013 C 9.627 3.101, 10.155 3.222, 10.642 3.425 C 11.129 3.628, 11.569 4.092, 12.000 4.230 C 12.431 4.368, 12.740 4.457, 13.227 4.254 C 13.713 4.052, 14.288 3.364, 14.920 3.013 C 15.552 2.661, 16.417 2.150, 17.020 2.147 C 17.624 2.144, 18.175 2.558, 18.542 2.996 C 18.910 3.434, 19.041 4.200, 19.225 4.775 C 19.409 5.350, 19.560 5.898, 19.645 6.445 C 19.730 6.993, 19.778 7.533, 19.736 8.058 C 19.693 8.584, 19.388 9.146, 19.390 9.599 C 19.391 10.051, 19.402 10.373, 19.746 10.773 C 20.089 11.173, 20.921 11.507, 21.450 12.000 Z"
-            fill="#000000" opacity=".95"/>
-    </svg>
-        </div>
-        <div class="txt">
-          <h2>SPLAT!</h2>
-          <p>Primaire / collège<br/>Diaporama + générateur</p>
-        </div>
-      </a>
-
-      <a class="card" href="./box_barre_final.html">
-        <div class="icon" aria-hidden="true">
-          <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M4 7a3 3 0 0 1 3-3h10a3 3 0 0 1 3 3v10a3 3 0 0 1-3 3H7a3 3 0 0 1-3-3V7Zm3 2h10v2H7V9Zm0 4h10v2H7v-2Z"/></svg>
-        </div>
-        <div class="txt">
-          <h2>BOX</h2>
-          <p>Générateur<br/>Schémas en barre</p>
-        </div>
-      </a>
-
-      <a class="card" href="./box_pasbarre_final.html">
-        <div class="icon" aria-hidden="true">
-          <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M5 6a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6Zm2 3h10v2H7V9Zm0 4h10v2H7v-2Z"/></svg>
-        </div>
-        <div class="txt">
-          <h2>BOX</h2>
-          <p>Générateur</p>
-        </div>
-      </a>
-
-      <div class="card card-picker" role="link" tabindex="0" data-default="./gabarits_enquêtes__1__A4.pdf">
-        <div class="icon" aria-hidden="true">
-          <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M7 3h7l3 3v15a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2Zm7 1v3h3M8 11h8v2H8v-2Zm0 4h8v2H8v-2Z"/></svg>
-        </div>
-        <div class="txt">
-          <h2>Enquêtes — gabarits</h2>
-          <p>Choisir le format — à plastifier</p>
-        </div>
-        <div class="pills" aria-label="Choisir le format">
-          <a class="pill" href="./gabarits_enquetes__1__A4.pdf" target="_blank" rel="noopener">A4</a>
-          <a class="pill" href="./gabarits_enquetes__1__A3.pdf" target="_blank" rel="noopener">A3</a>
-        </div>
-      </div>
-
-      <a class="card" href="./detective_des_grandeurs__1.pdf" target="_blank" rel="noopener">
-        <div class="icon" aria-hidden="true">
-          <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M7 3h7l3 3v15a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2Zm7 1v3h3M8 11h8v2H8v-2Zm0 4h8v2H8v-2Z"/></svg>
-        </div>
-        <div class="txt">
-          <h2>Enquêtes — Détective des grandeurs</h2>
-          <p>Énoncé — type 1</p>
-        </div>
-      </a>
-    </main>
-  </div>
-
-  <script>
-    document.querySelectorAll('.card-picker').forEach(card=>{
-      const openDefault = () => window.open(card.dataset.default, '_blank', 'noopener');
-
-      card.addEventListener('click', (e)=>{
-        if(e.target.closest('.pill')) return; // clic sur A4/A3
-        openDefault();
-      });
-
-      card.addEventListener('keydown', (e)=>{
-        if(e.key === 'Enter' || e.key === ' ') { e.preventDefault(); openDefault(); }
-      });
-    });
-  </script>
-
-</body>
+  card.addEventListener('keydown', (e)=>{
+    if(e.key === 'Enter' || e.key === ' ') { e.preventDefault(); openDefault(); }
+  });
+});
+</script></body>
 </html>
