--- a/outils/sheet_generator_schema_partie_tout.html
+++ b/outils/sheet_generator_schema_partie_tout.html
@@ -265,12 +265,12 @@
 <p>Générateur</p>
 </div>
 </a>
-<div class="card card-picker" data-default="./gabarits_enquete_1.pdf" role="link" tabindex="0"><div aria-hidden="true" class="icon">
+<div class="card card-picker" data-default="./gabarits_enquetes_1.pdf" role="link" tabindex="0"><div aria-hidden="true" class="icon">
 <svg aria-hidden="true" viewbox="0 0 24 24"><path d="M7 3h7l3 3v15a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2Zm7 1v3h3M8 11h8v2H8v-2Zm0 4h8v2H8v-2Z"></path></svg>
 </div><div class="txt">
 <h2>Enquêtes — gabarits</h2>
 <p>À imprimer (A3 ou A4) puis plastifier</p>
-</div><div aria-label="Téléchargements" class="pills"><a class="pill" href="./gabarits_enquete_1.pdf" rel="noopener" target="_blank">PDF</a><a class="pill" download="" href="./gabarits_enquete_1.tex" rel="noopener">TEX</a></div></div>
+</div><div aria-label="Téléchargements" class="pills"><a class="pill" href="./gabarits_enquetes_1.pdf" rel="noopener" target="_blank">PDF</a><a class="pill" download="" href="./gabarits_enquetes_1.tex" rel="noopener">TEX</a></div></div>
 <a class="card" href="./detective_des_grandeurs__1.pdf" rel="noopener" target="_blank">
 <div aria-hidden="true" class="icon">
 <svg aria-hidden="true" viewbox="0 0 24 24"><path d="M7 3h7l3 3v15a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2Zm7 1v3h3M8 11h8v2H8v-2Zm0 4h8v2H8v-2Z"></path></svg>
